--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
